# archive-ray-tracing

./: .gitignore  CMakeLists.txt  README.md
src/: Camera.cpp  Camera.h  Color.cpp  Color.h  Common.h  Hittable.cpp  Hittable.h  HittableList.cpp  HittableList.h  Image.cpp  Image.h  Material.cpp  Material.h  Ray.cpp  Ray.h  RenderThreadPool.cpp  RenderThreadPool.h  Sphere.cpp  Sphere.h  Vector3.cpp  Vector3.h  main.cpp
